--- a/svelte/src/app.html
+++ b/svelte/src/app.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="hamlindigo">
 
 <head>
-	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/icon.png" />
-	<meta name="viewport" content="width=device-width" />
+	<meta charset="utf-8" >
+	<link rel="icon" href="%sveltekit.assets%/icon.png" >
+	<meta name="viewport" content="width=device-width" >
 	%sveltekit.head%
 </head>
 
-<body data-sveltekit-preload-data="hover" data-theme="hamlindigo">
+<body data-sveltekit-preload-data="hover">
 	<div style="display: contents" class="h-full overflow-hidden">%sveltekit.body%</div>
 </body>
 
